k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        # we want to create an ingress controller based on nginx project
        kubernetes.io/ingress.class: 'nginx'
        nginx.ingress.kubernetes.io/use-regex: 'true'
        # allow nginx to update routes (e.g. /api --> /)
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        # inform ingress service that we will use letsencrypt certificate
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
        # make sure users are always using https connection
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    # serve https using these two host names
    tls:
        - hosts:
              - handiwork.nl
              - www.handiwork.nl
          secretName: handiwork-nl
    rules:
        - host: handiwork.nl
          http:
              paths:
                  # frontend
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-cluster-ip-service
                            port:
                                number: 3000
                    # backend
                  - path: /api/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: server-cluster-ip-service
                            port:
                                number: 5000
        - host: www.handiwork.nl
          http:
              paths:
                  # frontend
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-cluster-ip-service
                            port:
                                number: 3000
                    # backend
                  - path: /api/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: server-cluster-ip-service
                            port:
                                number: 5000
